feat: add reviews

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -10,9 +10,11 @@
 @forward 'components/layout/header';
 @forward 'components/sections/section-sponsor';
 @forward 'components/ui/advantage';
+@forward 'components/ui/arrows';
 @forward 'components/ui/card-benefit';
 @forward 'components/ui/card-news';
 @forward 'components/ui/card-overview';
+@forward 'components/ui/card-review';
 @forward 'components/ui/card-sales-report';
 @forward 'components/ui/card-statistic';
 @forward 'components/ui/nav';
