--- a/src/styles/special/_swal.scss
+++ b/src/styles/special/_swal.scss
@@ -30,7 +30,7 @@
         }
     }
     &__confirm-button {
-        @extend %swal_confirm-button;
+        @extend %shared_button-black;
         @include size(default, 60px);
         @include respond-to(desktop) {
             @include size(default, 80px);
