--- a/src/styles/utils/_lists.scss
+++ b/src/styles/utils/_lists.scss
@@ -39,6 +39,10 @@ $text-list: (
     "home_text-card-benefit-description-text" "Inter" medium normal "neutral-60" normal 14px 16px,
     "home_text-card-news-name" "Inter" semi-bold normal "neutral-100" normal 16px 32px,
     "home_text-card-news-description" "Inter" regular normal "neutral-60" normal 12px 14px,
+    "home_text-card-review-star-count" "Inter" medium normal "neutral-100" normal 14px 16px,
+    "home_text-card-review-text" "Inter" semi-bold normal "neutral-100" normal 18px 40px,
+    "home_text-card-review-author-name" "Inter" semi-bold normal "neutral-100" normal 14px 18px,
+    "hone_text-card-review-author-role" "Inter" medium normal "neutral-60" normal 12px 16px
 );
 
 $dynamic-text-list: (
