feat: add footer

--- a/src/styles/components/common/_buttons.scss
+++ b/src/styles/components/common/_buttons.scss
@@ -4,6 +4,9 @@
     &-black {
         @extend %shared_button-black;
     }
+    &-white {
+        @extend %shared_button-white;
+    }
     &-arrow-active {
         @extend %shared_button-arrow-active;
     }
