--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,6 +7,7 @@
 @forward 'components/common/link';
 @forward 'components/common/text';
 @forward 'components/layout/container';
+@forward 'components/layout/footer';
 @forward 'components/layout/header';
 @forward 'components/sections/section-sponsor';
 @forward 'components/ui/advantage';
