--- a/src/styles/utils/_lists.scss
+++ b/src/styles/utils/_lists.scss
@@ -13,10 +13,18 @@ $text-list: (
     "shared_link-arrow-underline" "Inter" semi-bold normal "neutral-100" normal 16px 16px,
     "shared_text-title-heading" "Inter" bold normal "neutral-100" normal 32px 80px,
     "shared_text-title-subheading" "Inter" semi-bold normal "neutral-100" 1.5 16px 32px,
+    "shared_text-title-footer-heading" "Inter" semi-bold normal "neutral-10" normal 24px 64px,
+    "shared_text-title-footer-subheading" "Inter" medium normal "neutral-10" 1.5 16px 18px,
+    "shared_text-footer-slogan" "Inter" medium normal "neutral-60" normal 14px 16px,
+    "shared_text-footer-nav-title" "Inter" medium normal "neutral-10" normal 16px 16px,
+    "shared_text-footer-nav-link" "Inter" regular normal "neutral-60" normal 16px 16px,
+    "shared_text-footer-link" "Inter" medium normal "neutral-10" normal 14px 14px,
+    "shared_text-footer-copyright" "Inter" medium normal "neutral-10" normal 14px 14px,
     "shared_text-title-heading-second-black" "Inter" bold normal "neutral-100" normal 24px 56px,
     "shared_text-title-heading-second-white" "Inter" semi-bold normal "neutral-10" normal 24px 56px,
     "shared_text-title-subheading-small" "Inter" medium normal "neutral-60" 1.65 14px 18px,
-    "shared_button-black" "Inter" semi-bold normal "neutral-10" normal 12px 16px,
+    "shared_text-button-black" "Inter" semi-bold normal "neutral-10" normal 12px 16px,
+    "shared_text-button-white" "Inter" semi-bold normal "neutral-100" normal 12px 16px,
     "home_text-main-image" "Inter" bold normal "neutral-100" normal 16px 20px,
     "home_input-main" "Inter" medium normal "neutral-100" normal 16px 18px,
     "home_input-main-placeholder" "Inter" medium normal "neutral-60" normal 14px 16px,
