feat: add about, main and some fixes

--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -21,4 +21,5 @@
 @forward 'components/ui/shared_nav';
 @forward 'components/ui/shared_slider';
 @forward 'components/ui/shared_title';
+@forward 'pages/about';
 @forward 'pages/home';
