--- a/frontend/src/styles/components/common/_shared_text.scss
+++ b/frontend/src/styles/components/common/_shared_text.scss
@@ -112,3 +112,14 @@
         }
     }
 }
+
+.about-page {
+    .text {
+        &-main-card-title {
+            @extend %about_text-main-card-title;
+        }
+        &-main-card-description {
+            @extend %about_text-main-card-description;
+        }
+    }
+}
