--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -50,7 +50,9 @@ $text-list: (
     "home_text-card-review-star-count" "Inter" medium normal "neutral-100" normal 14px 16px,
     "home_text-card-review-text" "Inter" semi-bold normal "neutral-100" normal 18px 40px,
     "home_text-card-review-author-name" "Inter" semi-bold normal "neutral-100" normal 14px 18px,
-    "home_text-card-review-author-role" "Inter" medium normal "neutral-60" normal 12px 16px
+    "home_text-card-review-author-role" "Inter" medium normal "neutral-60" normal 12px 16px,
+    "about_text-main-card-title" "Inter" semi-bold normal "neutral-100" normal 18px 32px,
+    "about_text-main-card-description" "Inter" medium normal "neutral-60" 1.5 14px 18px,
 );
 
 $dynamic-text-list: (
