--- a/frontend/src/styles/components/ui/_home_advantage.scss
+++ b/frontend/src/styles/components/ui/_home_advantage.scss
@@ -1,8 +1,10 @@
 @use "@utils-scss" as *;
 
-.advantage {
-    @include flex(on, $align-items: center, $gap: 8px);
-    @include respond-to(desktop) {
-        @include flex($gap: 16px);
+.home-page {
+    .advantage {
+        @include flex(true, $align-items: center, $gap: 8px);
+        @include respond-to(desktop) {
+            @include flex($gap: 16px);
+        }
     }
 }
