--- a/frontend/src/styles/components/ui/_home_result.scss
+++ b/frontend/src/styles/components/ui/_home_result.scss
@@ -1,26 +1,31 @@
 @use "@utils-scss" as *;
 
-.result {
-    @include flex(on, column, $gap: 8px);
-    &:nth-child(1), &:nth-child(5) {
-        @include size(default, 160px);
-    }
-    &:nth-child(3), &:nth-child(7) {
-        @include size(default, 143px);
-    }
-    &:nth-child(5), &:nth-child(7) {
-        @include respond-to(desktop) {
-            @include size(default, 199px);
+.home-page {
+    .result {
+        @include flex(true, column, $gap: 8px);
+        &:nth-child(1),
+        &:nth-child(5) {
+            @include size(default, 160px);
         }
-    }
-    &:nth-child(1) {
-        @include respond-to(desktop) {
-            @include size(default, 176px);
+        &:nth-child(3),
+        &:nth-child(7) {
+            @include size(default, 143px);
         }
-    }
-    &:nth-child(3) {
-        @include respond-to(desktop) {
-            @include size(default, 151px);
+        &:nth-child(5),
+        &:nth-child(7) {
+            @include respond-to(desktop) {
+                @include size(default, 199px);
+            }
+        }
+        &:nth-child(1) {
+            @include respond-to(desktop) {
+                @include size(default, 176px);
+            }
+        }
+        &:nth-child(3) {
+            @include respond-to(desktop) {
+                @include size(default, 151px);
+            }
         }
     }
 }
