--- a/frontend/src/styles/utils/_lists.scss
+++ b/frontend/src/styles/utils/_lists.scss
@@ -1,9 +1,9 @@
-@use 'sass:map';
-@use 'sass:list';
-@use 'sass:math';
-@use 'sass:meta';
+@use "sass:map";
+@use "sass:list";
+@use "sass:math";
+@use "sass:meta";
 
-@use 'functions.scss' as *;
+@use "functions.scss" as *;
 
 $text-list: (
     "swal_confirm-button" "Inter" semi-bold normal "neutral-10" normal 12px 16px,
@@ -53,8 +53,7 @@ $text-list: (
     "home_text-card-review-author-role" "Inter" medium normal "neutral-60" normal 12px 16px,
     "about_text-main-card-title" "Inter" semi-bold normal "neutral-100" normal 18px 32px,
     "about_text-main-card-description" "Inter" medium normal "neutral-60" 1.5 14px 18px,
+    "about_text-ideas-title-subheading" "Inter" semi-bold normal "neutral-100" 1.5 14px 24px
 );
 
-$dynamic-text-list: (
-
-);
+$dynamic-text-list: ();
